--- a/403/index.html
+++ b/403/index.html
@@ -29,8 +29,8 @@
             justify-content: center;
         }
 
-        #increment-btn,
-        #decrement-btn,
+        #plus-btn,
+        #minus-btn,
         #reset,
         #random-btn {
             height: 50px;
@@ -66,13 +66,14 @@
         
 
         <div class="counter">
-            <button id="increment-btn">+</button>
+            <button id="plus-btn">+</button>
             <div id="counter-value">0</div>
-            <button id="decrement-btn">-</button>
+            <button id="minus-btn">-</button>
         </div>
 
         <button id="reset">Reset</button>
         <button id="random-btn">Random</button>
+        
     </div>
 
     <script src="index.js"></script>
